CREATE TABLE SCIENTISTS(
  ID SERIAL PRIMARY KEY,
  NAME VARCHAR(50)
);

CREATE TABLE FUNDS(
  ID SERIAL PRIMARY KEY,
  OWNER INTEGER REFERENCES SCIENTISTS(ID)
);

CREATE TABLE NEGOTIATIONS(
  ID SERIAL PRIMARY KEY,
  TIME_START TIMESTAMP,
  TIME_END TIMESTAMP
);

CREATE TABLE NEGOTIATIONS_PARTICIPANTS(
  NEG_ID INTEGER REFERENCES NEGOTIATIONS(ID),
  SCIENTIST_ID INTEGER REFERENCES SCIENTISTS(ID)
);


CREATE TABLE ACTIONS(
  ID SERIAL PRIMARY KEY,
  DESCRIPTION TEXT
);

CREATE TABLE NEGOTIATION_ACTIONS(
  NEG_ID INTEGER REFERENCES NEGOTIATIONS(ID),
  ACTION_ID INTEGER REFERENCES ACTIONS(ID)
);

CREATE TABLE ACTION_SUBJECT(
  ACTION_ID INTEGER REFERENCES ACTIONS(ID),
  SUBJECT_ID INTEGER REFERENCES SCIENTISTS(ID)
);

CREATE TABLE CREATURES(
  ID SERIAL PRIMARY KEY,
  NAME VARCHAR(50),
  CREATION_DATE TIMESTAMP DEFAULT NOW()
);

CREATE TABLE CREATURE_CREATORS(
  CREATURE_ID INTEGER REFERENCES CREATURES(ID),
  SCIENTIST_ID INTEGER REFERENCES SCIENTISTS(ID)
);


CREATE TABLE CAGES(
  ID SERIAL PRIMARY KEY,
  CREATURE_ID INTEGER REFERENCES CREATURES(ID),
  UNIQUE(CREATURE_ID)
);

CREATE TABLE ACTION_CAGE_OBJECT(
  ACTION_ID INTEGER REFERENCES ACTIONS(ID),
  CAGE_ID INTEGER REFERENCES CAGES(ID)
);

CREATE TABLE THINGS(
  ID SERIAL PRIMARY KEY,
  DESCRIPTION TEXT
);


CREATE TABLE ACTION_THING_OBJECT(
  ACTION_ID INTEGER REFERENCES ACTIONS(ID),
  THING_ID INTEGER REFERENCES THINGS(ID)
);

CREATE TABLE CAGE_LOOKS_LIKE(
  CAGE_ID INTEGER REFERENCES CAGES(ID),
  THING_ID INTEGER REFERENCES THINGS(ID)
);

CREATE TABLE CAGE_COVERED_WITH(
  CAGE_ID INTEGER REFERENCES CAGES(ID),
  THING_ID INTEGER REFERENCES THINGS(ID),
  UNIQUE(CAGE_ID, THING_ID)
);

--- FILL WITH DATA
INSERT INTO SCIENTISTS(NAME) VALUES ('Hammond'), ('Gennaro');
INSERT INTO CREATURES(NAME) VALUES ('Elephant');

INSERT INTO CREATURE_CREATORS(CREATURE_ID, SCIENTIST_ID) VALUES (1, 1), (1,2);

INSERT INTO CAGES(CREATURE_ID) VALUES (1);

INSERT INTO THINGS(DESCRIPTION) VALUES ('небольшое одеяло');
INSERT INTO CAGE_COVERED_WITH(CAGE_ID, THING_ID) VALUES (1,1);

INSERT INTO THINGS(DESCRIPTION) VALUES('заварочный чайник с чехлом');
INSERT INTO CAGE_LOOKS_LIKE(CAGE_ID, THING_ID) VALUES (1, 2);

INSERT INTO ACTIONS(DESCRIPTION) VALUES ('внести в комнату клетку'), ('произнести речь'), ('сорвать одеяло'), ('просить денег');
INSERT INTO ACTION_SUBJECT(ACTION_ID, SUBJECT_ID) VALUES (1, 2); --- Дженнаро вносит клетку
INSERT INTO ACTION_SUBJECT(ACTION_ID, SUBJECT_ID) VALUES (2, 1); --- Хэммонд произносит речь
INSERT INTO ACTION_SUBJECT(ACTION_ID, SUBJECT_ID) VALUES (3, 1); --- Хэммонд срывает одеяло
INSERT INTO ACTION_SUBJECT(ACTION_ID, SUBJECT_ID) VALUES (4, 1); --- Хэммонд просит денег

INSERT INTO ACTION_CAGE_OBJECT(ACTION_ID, CAGE_ID) VALUES (1, 1);
INSERT INTO ACTION_THING_OBJECT(ACTION_ID, THING_ID) VALUES (3, 1);

INSERT INTO NEGOTIATIONS(TIME_START, TIME_END) VALUES (NOW(), NOW());
INSERT INTO NEGOTIATIONS_PARTICIPANTS(NEG_ID, SCIENTIST_ID) VALUES (1, 1), (1, 2);

INSERT INTO NEGOTIATION_ACTIONS(NEG_ID, ACTION_ID) VALUES (1, 1), (1, 2), (1, 3), (1, 4);

INSERT INTO FUNDS(OWNER) VALUES (1);