@startuml
entity SCIENTISTS {
  **PK** ID SERIAL
  NAME VARCHAR(50)
}

entity FUNDS {
  **PK** ID SERIAL
  **FK** OWNER_ID INTEGER
}

entity CREATURES {
    **PK** ID SERIAL
    NAME VARCHAR(50)
}

entity CREATURE_CREATORS {
    **FK** SCIENTIST_ID INTEGER
    **FK** CREATURE_ID INTEGER
}

entity CAGES {
    **PK** ID SERIAL
    **FK** CREATURE_ID INTEGER
}

entity NEGOTIATIONS {
    **PK** ID SERIAL
    START TIMESTAMP
    END TIMESTAMP
}

entity NEGOTIATION_PARTICIPANTS {
    **FK** NEG_ID INTEGER
    **FK** SCIENTIST_ID
}

entity ACTIONS {
    **PK** ID
    DESCRIPTION TEXT
}

entity THINGS {
    **PK** ID
    DESCRIPTION TEXT
}

entity CAGE_LOOKS_LIKE {
    **FK** CAGE_ID INTEGER
    **FK** THING_ID
}

entity ACTION_CAGE_OBJECT {
    **FK** ACTION_ID INTEGER
    **FK** CAGE_ID INTEGER
}

entity ACTION_THING_OBJECT {
    **FK** ACTION_ID INTEGER
    **FK** THING_ID INTEGER
}

entity NEGOTIATION_ACTIONS {
    **FK** NEG_ID INTEGER
    **FK** ACTION_ID INTEGER
}

entity ACTION_SUBJECT {
    **FK** ACTION_ID INTEGER
    **FK** SCIENTIST_ID INTEGER
}

SCIENTISTS ||--o{ FUNDS: владелец


SCIENTISTS ||--o{ CREATURE_CREATORS: создатель
CREATURE_CREATORS }|--|| CREATURES: создатель

SCIENTISTS ||--o{ NEGOTIATION_PARTICIPANTS
NEGOTIATION_PARTICIPANTS }|--|| NEGOTIATIONS

CREATURES ||--|| CAGES: находится в клетке

CAGES |o--o| THINGS: накрыта
CAGES |o--o{ CAGE_LOOKS_LIKE: похожа на
CAGE_LOOKS_LIKE }o--o| THINGS: похожа на

SCIENTISTS |o--o{ ACTION_SUBJECT: субъетк действия
ACTION_SUBJECT }o--o| ACTIONS: субъект дейсвтия

ACTIONS |o--o{ ACTION_THING_OBJECT
ACTIONS |o--o{ ACTION_CAGE_OBJECT

ACTION_THING_OBJECT }o--o| THINGS
ACTION_CAGE_OBJECT }o--o| CAGES

ACTIONS |o--o{ NEGOTIATION_ACTIONS
NEGOTIATIONS |o--o{ NEGOTIATION_ACTIONS
@enduml